--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,24 @@
 {
   "name": "whatever_discussion_server",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "private": false,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "react-router-dom": "^6.3.0"
+    "chai": "^4.3.6",
+    "chai-http": "^4.3.0",
+    "express": "^4.18.1",
+    "mocha": "^10.0.0",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
+    "nodemon": "^2.0.16",
+    "react-router-dom": "^6.3.0",
+    "request": "^2.88.2",
+    "sequelize": "^6.19.0",
+    "sinon": "^14.0.0"
+  },
+  "devDependencies": {
+    "sequelize-cli": "^6.4.1"
   }
 }
